--- a/content/01_Tech/05_빅데이터분석기사/2_2_분석 변수 처리.md
+++ b/content/01_Tech/05_빅데이터분석기사/2_2_분석 변수 처리.md
@@ -2,6 +2,7 @@
 1) 전진선택법 : 변수 하나씩 추가하면서 계산
 2) 후진제거법 : 변수 하나씩 제거하면서 계산
 3) 단계별 선택법 : 전진선택법 + 후진선택법으로 변수를 추가할 때 벌점을 고려
+   유의한 변수는 전진선택을 통해 추가하고 나머지는 후진 ㅇㅇ
     ![[Pasted image 20260116195005.png]]
 
 ### 차원의 저주
